welcome.lessons.welcome.instructions.Instructions.scala.error
Program:1: error: value grey is not a member of object java.awt.Color
setCouleurBrosse(Color.grey)
                       ^